# grok2api

./: Dockerfile  main.py  pyproject.toml
app/api/pages/: public.py
app/api/v1/: chat.py  image.py  nsfw.py  response.py
app/api/v1/public_api/: __init__.py  chat.py  imagine.py  video.py
app/services/grok/services/: chat.py  image.py  image_edit.py  responses.py  video.py
app/services/grok/utils/: response.py  tool_call.py  upload.py
app/services/reverse/: app_chat.py  assets_upload.py  media_post.py
app/static/admin/js/: token.js
app/static/admin/pages/: token.html
app/static/common/css/: common.css
app/static/common/html/: public-header.html
app/static/common/js/: prompt-enhancer.js  public-header.js
app/static/public/css/: chat.css  imagine.css  imagine_workbench.css  video.css
app/static/public/js/: chat.js  imagine.js  imagine_workbench.js  login.js  video.js
app/static/public/pages/: chat.html  imagine_workbench.html  video.html
